--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -1,6 +1,8 @@
 <div>
     <div class="container-fluid">
-        <h1>Generate New Post</h1>
+        <h1>Generate New Post
+            <a href='Changelog.html' class='version'>${version}</a>
+        </h1>
         <div class="row">
             <div class="col-md-4 input">
                 <div class="form-group">
