--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -1,7 +1,7 @@
 <div>
     <div class="container-fluid">
         <h1>Generate New Post
-            <a href='Changelog.html' class='version'>${version}</a>
+            <a href='ChangeLog.html' class='version'>${version}</a>
         </h1>
         <div class="row">
             <div class="col-md-4 input">
