--- a/src/app/templates/App.html
+++ b/src/app/templates/App.html
@@ -17,10 +17,14 @@
                         <option value="page">Page</option>
                     </select>
                 </div>
-                <div class="checkbox">
-                    <label>
-                        <input data-dojo-attach-point='featured' type="checkbox"> Featured
-                    </label>
+                <div class="form-group">
+                    <select class="form-control" data-dojo-attach-point='categories' multiple size="5">
+                        <option>Featured</option>
+                        <option>Developer</option>
+                        <option>SGID Blog</option>
+                        <option>GPS-surveyor</option>
+                        <option>Guestblog</option>
+                    </select>
                 </div>
                 <div class="form-group">
                     <label>Tags (comma-separated)</label>
